# pico_fota_bootloader

./: CMakeLists.txt  README.md  bootloader.c  main.c
include/: mbedtls_config.h  pico_fota_bootloader.h
linker_common/: app2040.ld  application.ld  boot2350.ld  bootloader.ld  linker_definitions.h  linker_definitions.in  linker_definitions.ld
scripts/: sha256_append.py
src/: bootloader_app.c  flash_utils.h  pico_fota_bootloader.c
